--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,6 +43,7 @@ dependencies:
   bloc: ^9.0.1
   flutter_bloc: ^9.1.1
   equatable: ^2.0.7
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
