--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_bloc: ^9.1.1
   equatable: ^2.0.7
   provider: ^6.1.5+1
+  get_it: ^8.2.0
+  lottie: ^3.3.2
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +84,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/images/lottie/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
