--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   provider: ^6.1.5+1
   get_it: ^8.2.0
   lottie: ^3.3.2
+  toastification: ^3.0.3
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
@@ -98,12 +100,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: BYekan
+      fonts:
+        - asset: assets/fonrts/Yekan.ttf
+        # - asset: fonts/Schyler-Italic.ttf
+          # style: italic
+          weight: 700
+    - family: Poppins
+      fonts:
+        - asset: assets/fonrts/poppins_medium.ttf
+        # - asset: fonts/Schyler-Italic.ttf
+          # style: italic
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
