--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/images/jpg/
     - assets/images/lottie/
   #   - images/a_dot_ham.jpeg
 
