--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   lottie: ^3.3.2
   toastification: ^3.0.3
   google_fonts: ^6.3.2
+  animated_bottom_navigation_bar: ^1.4.0
+  flutter_staggered_grid_view: ^0.7.0
+  super_tooltip: ^2.1.0
 
 dev_dependencies:
   flutter_test:
