--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   animated_bottom_navigation_bar: ^1.4.0
   flutter_staggered_grid_view: ^0.7.0
   super_tooltip: ^2.1.0
+  searchfield: ^1.3.5
 
 dev_dependencies:
   flutter_test:
