--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,12 @@ dependencies:
   shamsi_date: ^1.1.1
   adaptive_dialog: ^2.5.0
   image_picker: ^1.2.0
+  firebase_core: ^4.2.1
+  firebase_database: ^12.0.4
+  dio: ^5.9.0
+  uuid: ^4.5.2
+  firebase_storage: ^13.0.4
+  cloud_firestore: ^6.1.0
 
 dev_dependencies:
   flutter_test:
