home_screen pagination added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   uuid: ^4.5.2
   firebase_storage: ^13.0.4
   cloud_firestore: ^6.1.0
+  smooth_page_indicator: ^1.2.1
+  flutter_spinkit: ^5.2.2
 
 dev_dependencies:
   flutter_test:
